--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -24,9 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MVVM\Model\Services\" />
-    <Folder Include="MVVM\View\" />
     <Folder Include="DTOs\" />
+    <Folder Include="MVVM\Command\" />
     <Folder Include="Theme\" />
   </ItemGroup>
 
@@ -34,6 +33,11 @@
     <None Include="Resources\styles.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
 </Project>
