--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -10,18 +10,65 @@
 
   <ItemGroup>
     <Compile Remove="Model\**" />
+    <Compile Remove="MVVM\Model\Services\**" />
     <Compile Remove="View\**" />
     <EmbeddedResource Remove="Model\**" />
+    <EmbeddedResource Remove="MVVM\Model\Services\**" />
     <EmbeddedResource Remove="View\**" />
     <None Remove="Model\**" />
+    <None Remove="MVVM\Model\Services\**" />
     <None Remove="View\**" />
     <Page Remove="Model\**" />
+    <Page Remove="MVVM\Model\Services\**" />
     <Page Remove="View\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="MVVM\Model\Services\" />
+    <None Remove="resources\images\controlbarimg\arrow-down.png" />
+    <None Remove="resources\images\controlbarimg\close.png" />
+    <None Remove="resources\images\controlbarimg\closeBill_Infor.png" />
+    <None Remove="resources\images\controlbarimg\close_mouseover.png" />
+    <None Remove="resources\images\controlbarimg\maxi.png" />
+    <None Remove="resources\images\controlbarimg\MaxiMouseOver.png" />
+    <None Remove="resources\images\controlbarimg\minimize.png" />
+    <None Remove="resources\images\controlbarimg\minimize_mouseover.png" />
+    <None Remove="resources\images\controlbarimg\more.png" />
+    <None Remove="resources\images\controlbarimg\reloadIcon.png" />
+    <None Remove="resources\images\controlbarimg\user.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="LiveCharts.Wpf.NetCore3" Version="0.9.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="resources\images\controlbarimg\close.png" />
+    <Resource Include="resources\images\controlbarimg\closeBill_Infor.png" />
+    <Resource Include="resources\images\controlbarimg\close_mouseover.png" />
+    <Resource Include="resources\images\controlbarimg\maxi.png" />
+    <Resource Include="resources\images\controlbarimg\maximouseover.png" />
+    <Resource Include="resources\images\controlbarimg\minimize.png" />
+    <Resource Include="resources\images\controlbarimg\minimize_mouseover.png" />
+    <Resource Include="resources\images\controlbarimg\more.png" />
+    <Resource Include="resources\images\controlbarimg\reloadIcon.png" />
+    <Resource Include="resources\images\controlbarimg\user.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="resources\images\controlbarimg\arrow-down.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
