--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -20,8 +20,80 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\appImage.png" />
+    <None Remove="Resources\Images\controlbarimg\close.png" />
+    <None Remove="Resources\Images\controlbarimg\close_mouseover.png" />
+    <None Remove="Resources\Images\controlbarimg\Maxi.png" />
+    <None Remove="Resources\Images\controlbarimg\MaxiMouseOver.png" />
+    <None Remove="Resources\Images\controlbarimg\minimize.png" />
+    <None Remove="Resources\Images\controlbarimg\minimize_mouseover.png" />
+    <None Remove="Resources\Images\controlbarimg\more.png" />
+    <None Remove="Resources\Images\controlbarimg\reloadIcon.png" />
+    <None Remove="Resources\Images\controlbarimg\user.png" />
+    <None Remove="Resources\Images\Login\Font.png" />
+    <None Remove="Resources\Images\Login\hideIcon.png" />
+    <None Remove="Resources\Images\Login\showIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\controlbarimg\close.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\close_mouseover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\Maxi.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\MaxiMouseOver.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\minimize.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\minimize_mouseover.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\more.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\reloadIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\controlbarimg\user.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="MVVM\Model\Services\" />
     <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\appImage.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Login\Font.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Login\hideIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Login\showIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
