--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -8,6 +8,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+<ItemGroup>
+  <None Update="appsettings.json">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
+
   <ItemGroup>
     <Compile Remove="Model\**" />
     <Compile Remove="MVVM\Model\Services\**" />
@@ -24,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
     <None Remove="Resources\Images\appImage.png" />
     <None Remove="Resources\Images\controlbarimg\close.png" />
     <None Remove="Resources\Images\controlbarimg\close_mouseover.png" />
@@ -34,12 +41,16 @@
     <None Remove="Resources\Images\controlbarimg\more.png" />
     <None Remove="Resources\Images\controlbarimg\reloadIcon.png" />
     <None Remove="Resources\Images\controlbarimg\user.png" />
+    <None Remove="Resources\Images\HoaDon\closeBill_Infor.png" />
     <None Remove="Resources\Images\Login\Font.png" />
     <None Remove="Resources\Images\Login\hideIcon.png" />
     <None Remove="Resources\Images\Login\showIcon.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\appImage.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Images\controlbarimg\close.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
@@ -67,6 +78,15 @@
     <Resource Include="Resources\Images\controlbarimg\user.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Images\Login\Font.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Login\hideIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\Login\showIcon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
@@ -84,7 +104,30 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\HoaDon\closeBill_Infor.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="MySqlConnector" Version="2.4.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
   </ItemGroup>
 
 </Project>
