--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -146,7 +146,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
   </ItemGroup>
 
-</Project>
+	<ItemGroup>
+
     <Resource Include="resources\images\controlbarimg\arrow-down.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
