--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -1,107 +1,45 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseWPF>true</UseWPF>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Model\**" />
-    <Compile Remove="MVVM\Model\Services\**" />
-    <Compile Remove="View\**" />
-    <EmbeddedResource Remove="Model\**" />
-    <EmbeddedResource Remove="MVVM\Model\Services\**" />
-    <EmbeddedResource Remove="View\**" />
-    <None Remove="Model\**" />
-    <None Remove="MVVM\Model\Services\**" />
-    <None Remove="View\**" />
-    <Page Remove="Model\**" />
-    <Page Remove="MVVM\Model\Services\**" />
-    <Page Remove="View\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Resources\Images\appImage.png" />
-    <None Remove="Resources\Images\controlbarimg\arrow-down.png" />
-    <None Remove="Resources\Images\controlbarimg\close.png" />
-    <None Remove="Resources\Images\controlbarimg\close_mouseover.png" />
-    <None Remove="Resources\Images\controlbarimg\Maxi.png" />
-    <None Remove="Resources\Images\controlbarimg\MaxiMouseOver.png" />
-    <None Remove="Resources\Images\controlbarimg\minimize.png" />
-    <None Remove="Resources\Images\controlbarimg\minimize_mouseover.png" />
-    <None Remove="Resources\Images\controlbarimg\more.png" />
-    <None Remove="Resources\Images\controlbarimg\reloadIcon.png" />
-    <None Remove="Resources\Images\controlbarimg\user.png" />
-    <None Remove="Resources\Images\Login\Font.png" />
-    <None Remove="Resources\Images\Login\hideIcon.png" />
-    <None Remove="Resources\Images\Login\showIcon.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Resources\Images\controlbarimg\arrow-down.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\close.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\close_mouseover.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\Maxi.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\MaxiMouseOver.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\minimize.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\minimize_mouseover.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\more.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\reloadIcon.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\Images\controlbarimg\user.png">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="resources\images\controlbarimg\close.png" />
-    <None Remove="resources\images\controlbarimg\closeBill_Infor.png" />
-    <None Remove="resources\images\controlbarimg\close_mouseover.png" />
-    <None Remove="resources\images\controlbarimg\maxi.png" />
-    <None Remove="resources\images\controlbarimg\MaxiMouseOver.png" />
-    <None Remove="resources\images\controlbarimg\minimize.png" />
-    <None Remove="resources\images\controlbarimg\minimize_mouseover.png" />
-    <None Remove="resources\images\controlbarimg\more.png" />
-    <None Remove="resources\images\controlbarimg\reloadIcon.png" />
-    <None Remove="resources\images\controlbarimg\user.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTOs\" />
-  </ItemGroup>
-  <ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
-		<PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.13">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
+	<ItemGroup>
+		<!-- EF Core & MySQL -->
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.13" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13" PrivateAssets="all" />
+
+		<!-- Configuration & DI -->
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.0" />
+
+		<!-- UI & WPF -->
+		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+		<PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc5.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Copy cấu hình -->
+		<Content Include="appsettings.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- Tài nguyên hình ảnh -->
+		<Resource Include="Resources\Images\**\*.png">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Resource>
 	</ItemGroup>
 
 </Project>
