--- a/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
+++ b/QuanLyTiecCuoi/QuanLyTiecCuoi.csproj
@@ -45,4 +45,16 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="MVVM\ViewModel\ControlBarViewModel.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="ResourcesXAML\MainResource.xaml">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Page>
+  </ItemGroup>
+
 </Project>
